--- a/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
+++ b/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
@@ -21,14 +21,6 @@
    <!-- Geofence Details -->
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-4">
         <ng-container *ngIf="vehicle; else skeletonOverview">
-            <!-- Radius Card -->
-            <div class="p-4 rounded-xl border border-gray-200 shadow-sm bg-white col-span-2">
-               <p class="text-xs uppercase tracking-wide text-gray-500">Address</p>
-               <p class="mt-1 text-md font-semibold text-gray-800">
-                   {{ vehicle.location }}
-               </p>
-           </div>
-
             <div class="p-4 rounded-xl border border-gray-200 shadow-sm bg-white">
                 <p class="text-xs uppercase tracking-wide text-gray-500">Updated</p>
                 <p class="mt-1 text-md font-semibold text-gray-800">
@@ -44,8 +36,15 @@
                 </p>
             </div>
 
+             <div class="p-4 rounded-xl border border-gray-200 shadow-sm bg-white col-span-2">
+               <p class="text-xs uppercase tracking-wide text-gray-500">Address</p>
+               <p class="mt-1 text-md font-semibold text-gray-800">
+                   {{ vehicle.location }}
+               </p>
+           </div>
+
               <div class="p-4 rounded-xl border border-gray-200 shadow-sm bg-white">
-                <p class="text-xs uppercase tracking-wide text-gray-500">Battery (Internal / External)</p>
+                <p class="text-xs uppercase tracking-wide text-gray-500">Battery (Int / Ext)</p>
                 <p class="mt-1 text-md font-semibold text-gray-800">
                     0.00 / 0.00
                 </p>
@@ -73,10 +72,27 @@
                      {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
                 </p>
             </div>
+
+                <div class="p-4 rounded-xl border border-gray-200 shadow-sm bg-white">
+                <p class="text-xs uppercase tracking-wide text-gray-500">Updated</p>
+                <p class="mt-1 text-md font-semibold text-gray-800">
+                    {{ vehicle.lastUpdated | timeAgo }}
+                </p>
+            </div>
+
+
+              <div class="p-4 rounded-xl border border-gray-200 shadow-sm bg-white">
+                <p class="text-xs uppercase tracking-wide text-gray-500">Odometer</p>
+                <p class="mt-1 text-md font-semibold text-gray-800">
+                     {{ ((vehicle?.apiObject?.device?.details?.lastOdometer) / 1000).toFixed(3) || 0 }}
+                </p>
+            </div>
+
+            
         </ng-container>
 
          @if(iframeUrl) {
-      <div class="fixed bottom-0 left-0 w-full max-w-4xl">
+      <div class="fixed bottom-[-20px] left-0 w-full max-w-4xl">
         <span class="text-lg font-semibold px-4 py-2">
           Live From Vehicle
         </span>
@@ -84,7 +100,7 @@
           class="w-full h-80 px-4" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       } @else { 
-         <div class="fixed bottom-0 left-0 w-full max-w-4xl bg-gray-100 border-t border-gray-300">
+         <div class="fixed bottom-[-25px] left-0 w-full max-w-4xl bg-gray-100 border-t border-gray-300">
     <div class="flex flex-col items-center justify-center h-80 px-4 py-8">
       <!-- No Camera Vector Icon -->
       <svg width="80" height="80" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mb-4 text-gray-400">
