--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,5 +11,6 @@
 
 
 @import 'leaflet/dist/leaflet.css';
+@import 'leaflet-draw/dist/leaflet.draw.css';
 @import 'leaflet.markercluster/dist/MarkerCluster.css';
 @import 'leaflet.markercluster/dist/MarkerCluster.Default.css'
