--- a/src/app/shared/components/generic-geofence-crud/generic-geofence-crud.component.html
+++ b/src/app/shared/components/generic-geofence-crud/generic-geofence-crud.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <!-- Form Section -->
-    <div class="w-[300px] px-4 border-l border-gray-200 bg-white overflow-y-auto">
+    <div class="w-[350px] pl-4 border-l border-gray-200 bg-white">
         <app-generic-form-generator
             [config]="formFields"
             [initialData]="formFields.isEditMode ? editData : null"
