--- a/src/app/pages/home/components/track-map/track-map.component.html
+++ b/src/app/pages/home/components/track-map/track-map.component.html
@@ -104,8 +104,8 @@
 
                 <!-- Row 3: Actions -->
                 <div class="flex items- gap-2">
-                    <p-button label="Follow Map" [icon]="'pi pi-directions'" rounded (onClick)="toggleTrailVisibility()" size="small"> </p-button>
-                    <p-button label="Toggle Path" [icon]="'pi pi-eye-slash'" rounded (onClick)="toggleTrailVisibility()" size="small"> </p-button>
+                    <p-button severity="secondary" label="Follow Map" [icon]="'pi pi-directions'" rounded (onClick)="toggleTrailVisibility()" size="small"> </p-button>
+                    <p-button severity="secondary" label="Toggle Path" [icon]="'pi pi-eye-slash'" rounded (onClick)="toggleTrailVisibility()" size="small"> </p-button>
                     <p-button label="Exit Tracking" icon="pi pi-times" severity="danger" (onClick)="exitTracking()" rounded size="small"></p-button>
                 </div>
             </div>
