--- a/src/app/pages/cctv-camera/cctv-camera.component.html
+++ b/src/app/pages/cctv-camera/cctv-camera.component.html
@@ -1,4 +1,6 @@
-<div class="w-full h-screen flex flex-col bg-gray-50 text-gray-900">
+<div class="w-full h-screen flex flex-col">
+  @if(carouselPages.length) {
+
   <div class="flex-1 p-4">
     <p-carousel
       [value]="carouselPages"
@@ -12,15 +14,20 @@
       class="w-full h-full">
       <ng-template let-pageGrids pTemplate="item">
         <div class="w-full h-[calc(100vh-120px)]">
-          <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-4 gap-4 h-full">
+          <div class="grid gap-4 h-full w-full" [ngClass]="{
+                'grid-cols-1': pageGrids.length === 1,
+                'grid-cols-2': pageGrids.length === 2,
+                'grid-cols-3': pageGrids.length === 3,
+                'grid-cols-4': pageGrids.length >= 4
+              }">
             <div
               *ngFor="let camera of pageGrids; trackBy: trackByCamera"
               class="flex flex-col bg-white border rounded-lg shadow-sm overflow-hidden hover:shadow-md transition"
             >
-              <div class="p-2 flex justify-between items-center border-b bg-gray-50">
-                <span class="text-xs font-medium text-gray-600">Cam {{ camera.id }}</span>
+              <div class="p-2 flex justify-between items-center border-b">
+                <span class="text-xs font-medium">Cam {{ camera.id }}</span>
                 <p-select
-                  [options]="getChannelOptions(camera.deviceImei)"
+                  [options]="camera.channels"
                   [(ngModel)]="camera.channelName"
                   (onChange)="onChannelSelect(camera, $event.value)"
                   optionLabel="label"
@@ -52,11 +59,6 @@
                   </div>
                 </div>
 
-                <!-- Selected -->
-                <div *ngIf="camera.isSelected" class="absolute top-2 right-2 w-5 h-5 rounded-full bg-[var(--primary-color)] text-white flex items-center justify-center">
-                  <i class="pi pi-check text-xs"></i>
-                </div>
-
                 <!-- Status -->
                 <div class="absolute bottom-2 left-2 flex items-center gap-1">
                   <span class="w-2 h-2 rounded-full bg-green-500 animate-pulse"></span>
@@ -67,10 +69,10 @@
               <!-- Footer -->
               <div class="p-2 flex justify-between items-center text-xs bg-gray-50 border-t">
                 <span class="text-gray-500 truncate">
-                  {{ camera.deviceImei.slice(-6) }}
+                  {{ camera?.imei?.slice(-6) }}
                 </span>
                 <span class="text-[var(--primary-color)] font-semibold">
-                  {{ camera.channelName }}
+                  {{ camera?.channel?.label }}
                 </span>
               </div>
             </div>
@@ -79,4 +81,7 @@
       </ng-template>
     </p-carousel>
   </div>
+
+  }
+
 </div>
