--- a/src/app/pages/home/components/track-map/track-map.component.html
+++ b/src/app/pages/home/components/track-map/track-map.component.html
@@ -95,10 +95,16 @@
                             </span>
                         </div>
                         <div class="flex gap-2">
-                            <img src="images/home/icon_share.svg" alt="Share" class="w-4 h-4 cursor-pointer transition-all duration-300 hover:scale-110 active:scale-95 opacity-70 hover:opacity-100" />
-                            <img src="images/home/icon_share.svg" alt="Share" class="w-4 h-4 cursor-pointer transition-all duration-300 hover:scale-110 active:scale-95 opacity-70 hover:opacity-100" />
-                            <img src="images/home/icon_share.svg" alt="Share" class="w-4 h-4 cursor-pointer transition-all duration-300 hover:scale-110 active:scale-95 opacity-70 hover:opacity-100" />
+                          <i class="pi pi-share cursor-pointer w-4 h-4 transition-all duration-300 
+                                    hover:scale-110 active:scale-95 opacity-70 hover:opacity-100"></i>
+                        
+                          <i class="pi pi-history cursor-pointer w-4 h-4 transition-all duration-300 
+                                    hover:scale-110 active:scale-95 opacity-70 hover:opacity-100"></i>
+                        
+                          <i class="pi pi-refresh cursor-pointer w-4 h-4 transition-all duration-300 
+                                    hover:scale-110 active:scale-95 opacity-70 hover:opacity-100"></i>
                         </div>
+
                     </div>
                 </div>                
 
