--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -1,1 +1,26 @@
-<p>reports works!</p>
+<div class="p-8">
+      <p-carousel [value]="(reports$ | async)" [numVisible]="3" [numScroll]="1" [circular]="true" autoplayInterval="3000">
+        <ng-template let-report #item>
+             <div class="p-6 h-full border mr-2 rounded-lg shadow-sm bg-white">
+            <div class="flex items-start justify-between mb-4">
+                <div class="w-10 h-10 bg-primary/10 rounded-lg flex items-center justify-center">
+                    <i class="pi pi-book text-[var(--primary-color)]"></i>
+                    <!-- <svg class="w-8 h-8 text-primary rounded-xl" fill="currentColor"
+                        viewBox="0 0 20 20">
+                        <path fill-rule="evenodd"
+                            d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                            clip-rule="evenodd" />
+                    </svg> -->
+                </div>
+                <div class="animate-pulse">
+                    <div class="w-3 h-3 rounded-full bg-green-500"></div>
+                </div>
+            </div>
+
+            <h3 class="text-xl font-bold mb-2">{{report?.reportName}} Report</h3>
+            <p class="text-gray-600 text-sm mb-4">Real-time location tracking and position analytics for your fleetvehicles and assets.</p>
+            <p-button severity="primary" styleClass="w-full" (onClick)="navigateToReport(report)">View</p-button>
+        </div>
+        </ng-template>
+    </p-carousel>   
+</div>
