Some happy Flow

--- a/src/app/pages/reports/report-detail/report-detail.component.html
+++ b/src/app/pages/reports/report-detail/report-detail.component.html
@@ -4,7 +4,7 @@
             <app-generic-path-replay [vehicle]="(selectedVehicle$ | async)" [formFields]="pathReplayService.formFields$ | async" />
         </div>
         <div class="flex-1 min-w-0 h-full">
-          <app-track-map [activeTab]="'pathReplay'" />
+          <app-track-map [activeTab]="'reports'" />
         </div>
       </div>
 </div>
