--- a/src/app/shared/components/generic-point-markers/generic-point-markers.component.html
+++ b/src/app/shared/components/generic-point-markers/generic-point-markers.component.html
@@ -1,5 +1,5 @@
-<!-- <div class="bg-white shadow-sm border border-gray-200 p-4 h-full">
+<div class="bg-white shadow-sm border border-gray-200 p-4 h-full">
     <p-button outlined icon="pi pi-arrow-circle-left" [label]="'Back'" (onClick)="handleBackClick()" />
     <app-generic-form-generator [config]="formFields" [initialData]="defaultPlaybackObj"
         (formSubmit)="onFormSubmit($event)"></app-generic-form-generator>
-</div> -->
+</div>
