--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -12,6 +12,10 @@
         (formValueChanges)="onFormValueChange($event)"></app-generic-form-generator>
 </ng-template>
 
+<ng-template #bulkUserUploadTemplate>
+  <app-generic-bulk-upload [config]="userBulkUploadConfig" (upload)="onUpload($event)"></app-generic-bulk-upload>
+</ng-template>
+
 <ng-template #viewMoreDetails>
     <div class="w-full mx-auto">
         <!-- Header -->
