--- a/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
+++ b/src/app/pages/home/components/list-view/vehicles/vehicle-details/vehicle-details.component.html
@@ -2,12 +2,12 @@
     <!-- Vehicle Header -->
     <div class="flex justify-between items-center mb-6 shrink-0">
         <div class="flex items-center gap-3 group">
-            <span [ngClass]="vehicle | vehicleStatus" class="relative w-2.5 h-2.5 rounded-full transition-all duration-300 group-hover:scale-110">
+            <!-- <span [ngClass]="vehicle | vehicleStatus" class="relative w-2.5 h-2.5 rounded-full transition-all duration-300 group-hover:scale-110">
                 <span [ngClass]="vehicle | vehicleStatus" class="absolute top-0 left-0 w-full h-full rounded-full opacity-75 animate-ping"></span>
             </span>
             <span class="text-lg font-semibold text-gray-800 group-hover:text-gray-900">
                 {{ vehicle?.name || 'Loading...' }}
-            </span>
+            </span> -->
         </div>
         <div>
             <p-button icon="pi pi-ellipsis-v" [outlined]="true" (click)="menu.toggle($event)"></p-button>
